tests/approvals/execute_clang_tidy_test.test_execute_clang_tidy_warning.approved.txt
input_file: <root-dir>/sample_inputs/proj_warning/src/sample_function.cpp
exit_code: 1
stdout:
<root-dir>/sample_inputs/proj_warning/src/sample_function.cpp:5:26: error: do not call c-style vararg functions [cppcoreguidelines-pro-type-vararg,hicpp-vararg,-warnings-as-errors]
void sample_function() { std::printf("Test"); }
                         ^

stderr:
<count> warnings generated.

